--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ var overLayers = [
 	{
 		name: "Sleman",
 		icon: iconByName('Sleman'),
-		layer: new L.GeoJSON.AJAX(["sleman.geojson"],{onEachFeature:popUp}).addTo(map)
+		layer: new L.GeoJSON.AJAX(["jalanjogja.geojson"],{onEachFeature:popUp}).addTo(map)
 	},
 	{
 		name: "Kota Yogyakarta",
